# ResonAI

./: .env.example  LICENSE  README.md  REPOSITORY_LAYOUT.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: CONTRAST_AND_CALIBRATION.md  FALSIFICATION.md  GITHUB_UPLOAD_ALLOWLIST.md  GITHUB_UPLOAD_DENYLIST.md  P_RMP_DEMO_PLAN.md  THEORY_TO_CODE.md
samples/: README.md  demo_conflicting_objectives.jsonl  demo_silent_resonance.jsonl  demo_trivial_correlation.jsonl
scripts/: generate_fixture_sessions.py  make_github_bundle.py  openrouter_discover_models.py
src/prmp_demo/: __init__.py  agents.py  analyze_session.py  config.py  decision.py  falsification_metrics.py  gamma.py  json_utils.py  observer.py  openrouter_client.py  run_session.py  session_schema.py
src/prmp_demo/environment/: task_protocol.py
src/prmp_demo/pipeline/: dmd.py  grassmann.py  koopman_edmd.py  preprocess.py  stability.py  tda_optional.py
tests/: test_pipeline.py
