[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prmp-demo"
version = "0.1.0"
description = "Multi-Agent Resonance Framework (P-RMP) via OpenRouter"
readme = "README.md"
authors = [
    {name = "Ahmed Abdallatif"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.38.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
full = [
    "umap-learn>=0.5.6",
    "ripser>=0.6.10",
    "persim>=0.3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "optional: tests requiring pip install .[full] (ripser, persim, …)",
]
addopts = "-m \"not optional\""
